# osx-clip-sync

./: .gitignore  CMakeLists.txt
src/: IClipboard.hpp  OsxClipboard.hpp  OsxClipboard.mm  X11Clipboard.hpp  X11Clipboard.mm  main.c  main.mm  pbpoll.mm
